kustomize/overlays/ghc-dev/8e31b964/notes/chart/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-backend
  labels:
    app.kubernetes.io/name: notes-backend
    app.kubernetes.io/part-of: notes
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: notes-backend
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
