kustomize/overlays/ghc-dev/8e31b964/notes/chart/templates/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-envoy
  labels:
    app.kubernetes.io/name: notes-envoy
    app.kubernetes.io/part-of: notes
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: notes-envoy
  ports:
    - name: grpc-web
      port: 4005
      targetPort: grpc-web
