kustomize/overlays/ghc-dev/8e31b964/notes/chart/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-frontend
  labels:
    app.kubernetes.io/name: notes-frontend
    app.kubernetes.io/part-of: notes
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: notes-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
